NF-420 works for all inputText

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CaseReferenceView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CaseReferenceView.scala.html
@@ -43,7 +43,7 @@
             name = "caseReference",
             isPageHeading = true,
             label = "amend.case.reference.title",
-            hint = Some(messages("amend.case.reference.hint")),
+            hint = Some(Html(messages("amend.case.reference.hint"))),
             attributes = Map("autocomplete" -> "off"),
             classes = Some("govuk-!-width-one-half")
         )
