--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
@@ -57,7 +57,7 @@
             name = "eoriNumber",
             isPageHeading = true,
             label = "importer.eori.title",
-            hintHtml = Some(hintContent),
+            hint = Some(hintContent),
             attributes = Map("autocomplete" -> "off"),
             classes = Some("govuk-!-width-one-half")
         )
