--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ItemNumbersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ItemNumbersView.scala.html
@@ -43,7 +43,7 @@
             name = "itemNumbers",
             isPageHeading = true,
             label = "itemNumbers.title",
-            hint = Some(messages("itemNumbers.hint")),
+            hint = Some(Html(messages("itemNumbers.hint"))),
             attributes = Map("autocomplete" -> "off")
         )
 
