--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputText.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputText.scala.html
@@ -24,7 +24,7 @@
     hiddenLabel: Option[String] = None,
     isPageHeading: Boolean = false,
     headingMessageArgs: Seq[String] = Seq(),
-    hint: Option[String] = None,
+    hint: Option[Html] = None,
     hintHtml: Option[Html] = None,
     classes: Option[String] = None,
     autocomplete: Option[String] = None,
@@ -48,8 +48,8 @@
         isPageHeading = isPageHeading,
         classes = if(isPageHeading) "govuk-label--l" else ""
     ),
-    hint = hintHtml.map(hintHtml => Hint(
-        content = HtmlContent(hintHtml)
+    hint = hint.map(hint => Hint(
+        content = HtmlContent(hint)
     )),
     value = form(name).value,
     autocomplete = autocomplete.map(value => value),
