--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
@@ -39,7 +39,7 @@
         messages(
             "importer.eori.hint",
             externalLink(
-                text = messages("importer.eori.details.getEori.linktext"),
+                text = messages("importer.eori.getEori.linktext"),
                 href = appConfig.getEoriUrl
             )
         )
