--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterEoriNumberView.scala.html
@@ -37,13 +37,14 @@
 @hintContent = {
     @Html(
         messages(
-            "importer.eori.hint",
+            "importer.eori.hint1",
             externalLink(
                 text = messages("importer.eori.getEori.linktext"),
                 href = appConfig.getEoriUrl
             )
         )
     )
+    @paragraph(messages("importer.eori.hint2"), classes=Some("govuk-!-padding-top-4"))
 }
 
 @layout(pageTitle = Title(form, messages("importer.eori.title")), backLink) {
