NF-469 use correct button grouping component

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
@@ -62,7 +62,7 @@
     ))
 
     <div class="nidac-display-only-non-javascript">
-        @continueButton(id = "nidac-continue-non-js")
+        @continueButton(idKey = "site.continue.id.nonjs")
     </div>
 
 </form>
