--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
@@ -30,7 +30,7 @@
     inputText: components.inputText,
     addressFields: components.addressInputFields,
     errorSummary: errorSummary,
-    continueButton: components.continueButton
+    govukButton : GovukButton
 )
 
 @(form: Form[ImporterContactDetails], backLink: NavigatorBack)(implicit request: Request[_], messages: Messages)
@@ -50,10 +50,14 @@
             @components.hiddenInput("auditRef", form.value.flatMap(add => add.auditRef).getOrElse(""))
         }
 
-        @paragraphHtml {
-            @continueButton()
-            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange(), classes = Some("govuk-!-padding-left-4"))
-        }
+        <div class="govuk-button-group">
+            @govukButton(Button(
+                content = Text(messages("site.continue")),
+                attributes = Map("id" -> messages("site.continue.id")),
+                preventDoubleClick = true
+            ))
+            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange())
+        </div>
 
     }
 }
