--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
@@ -30,7 +30,7 @@
     inputText: components.inputText,
     addressFields: components.addressInputFields,
     errorSummary: errorSummary,
-    govukButton : GovukButton
+    continueButton: components.continueButton
 )
 
 @(form: Form[ImporterContactDetails], backLink: NavigatorBack)(implicit request: Request[_], messages: Messages)
@@ -51,11 +51,7 @@
         }
 
         <div class="govuk-button-group">
-            @govukButton(Button(
-                content = Text(messages("site.continue")),
-                attributes = Map("id" -> messages("site.continue.id")),
-                preventDoubleClick = true
-            ))
+            @continueButton()
             @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange())
         </div>
 
