--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/continueButton.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/continueButton.scala.html
@@ -18,12 +18,12 @@
 
 @this(govukButton: GovukButton)
 
-@(messageKey: String = "site.continue", idKey: String = "site.continue.id", disabled: Boolean = false)(implicit messages: Messages)
+@(messageKey: String = "site.continue", id: String = "nidac-continue", disabled: Boolean = false)(implicit messages: Messages)
 
 @govukButton(
  Button(
   content = Text(messages(messageKey)),
-  attributes = Map("id" -> messages(idKey)),
+  attributes = Map("id" -> id),
   disabled = disabled,
   preventDoubleClick = true
  )
