NF-467 - Amend a claim - confirmation page

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ConfirmationView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ConfirmationView.scala.html
@@ -30,6 +30,7 @@
 @(receipt: CreateClaimReceipt)(implicit request: Request[_], messages: Messages)
 
 @summaryContent = {
+    @components.heading(messages("create.claim.summary.title"))
     @claimSummaryHeading(receipt)
     @claimSummary(receipt.answers, withActions = false)
 }
