--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CreateClaimSummary.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CreateClaimSummary.scala.html
@@ -27,12 +27,7 @@
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.create.RepayTo
 @import play.twirl.api.{HtmlFormat}
 
-@this(
-        layout: Layout,
-        formHelper: FormWithCSRF,
-        warning : GovukWarningText,
-        summaryList: summaryList,
-        submitButton: components.submitButton )
+@this(summaryList: summaryList)
 
 @(answers: CreateAnswers, withActions: Boolean = true)(implicit request: Request[_], messages: Messages)
 
