--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/ReviewAmendClaimView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/ReviewAmendClaimView.scala.html
@@ -15,27 +15,26 @@
  *@
 
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.components.InformationTitle
-@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html._
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.Layout
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.heading
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.summaryList
-@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.create.CreateClaimReceipt
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.amend.AmendClaim
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.amend.AmendClaimReceipt
 
 @this(
         layout: Layout,
         summaryList: summaryList,
-        claimSummaryHeading: CreateClaimSummaryHeading,
-        claimSummary: CreateClaimSummary
+        claimSummary: AmendClaimSummary
 )
 
-@(claimReceipt: CreateClaimReceipt)(implicit request: Request[_], messages: Messages)
+@(receipt: AmendClaimReceipt)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = InformationTitle(messages("create.claim.summary.title")), NavigatorBack(None)) {
+@layout(pageTitle = InformationTitle(messages("amend.claim.summary.title")), NavigatorBack(None)) {
 
-    @components.heading(messages("create.claim.summary.title"))
+    @heading(messages("amend.claim.summary.title"))
 
-    @claimSummaryHeading(claimReceipt)
-
-    @claimSummary(claimReceipt.answers, withActions = false)
+    @claimSummary(AmendClaim(receipt.answers), withActions = false, submitted = Some(receipt.timestamp))
 
 
 }
