works - still playing

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/ConfirmationView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/ConfirmationView.scala.html
@@ -36,12 +36,16 @@
     @amendSummary(AmendClaim(receipt.answers), withActions = false, submitted = Some(receipt.timestamp))
 }
 
+@confirmationContent = {
+
+}
+
 @layout(pageTitle = InformationTitle(messages("amend.confirmation.title")), NavigatorBack(None)) {
 
     <div class="govuk-!-display-none-print">
         @govukPanel(Panel(
             title = Text(messages("amend.confirmation.title")),
-            content = HtmlContent(messages("amend.confirmation.reference", receipt.caseReference))
+        content = HtmlContent(s"<p>${messages("confirmation.reference.rory")}</p><p class='govuk-!-font-weight-bold'>${receipt.caseReference}</p>")
         ))
 
         @paragraph(messages("amend.confirmation.paragraph1"))
