--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadProgressBar.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadProgressBar.scala.html
@@ -16,4 +16,4 @@
 
 @()
 
-<span id="nidac-spinner" class="govuk-body upload-spinner"></span>
+<div id="nidac-progress-bar" class="nidac_progress_bar"></div>
