--- a/app/assets/stylesheets/upload-loading.scss
+++ b/app/assets/stylesheets/upload-loading.scss
@@ -1,36 +1,30 @@
-/* Dynamic spinner for please-wait page within file upload journey */
-.upload-spinner {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-left: 30%;
-  border: 12px solid #DEE0E2;
-  border-radius: 50%;
-  border-top-color: #005EA5;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
+/* Dynamic progress bar for please-wait page within file upload journey */
 
 .nidac-display-only-non-javascript {
   display: none;
+}
+
+.nidac_progress_bar_container {
+  border: solid;
+  width: 10rem;
+  border-color: #1d70b8;
+}
+.nidac_progress_bar {
+  width: 0%;
+  height: 20px;
+  background: #1d70b8;
+  position :relative;
+  // 500ms start delay for Safari - see nidacfrontend.js
+  -webkit-animation: move_progress 10s forwards 500ms;
+  animation: move_progress 10s forwards 500ms;
+}
+
+@keyframes move_progress {
+  from   {width: 0%;}
+  to  {width: 95%;}
+}
+
+@-webkit-keyframes  move_progress {
+  from   {width: 0%;}
+  to  {width: 95%;}
 }
