--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterBusinessNameView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterBusinessNameView.scala.html
@@ -38,18 +38,14 @@
     @formHelper(action = ImporterBusinessNameController.onSubmit(), 'autoComplete -> "off") {
         @errorSummary(form.errors)
 
-        @fieldSet(
-            legend = "importer.businessName.title"
-        ) {
-
-            @inputText(
-                form = form,
-                id = "name",
-                name = "name",
-                label = "",
-                autocomplete = Some("organization")
-            )
-        }
+        @inputText(
+            form = form,
+            id = "name",
+            name = "name",
+            isPageHeading = true,
+            label = "importer.businessName.title",
+            autocomplete = Some("organization")
+        )
 
         @continueButton()
     }
