--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputText.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputText.scala.html
@@ -29,7 +29,9 @@
     autocomplete: Option[String] = None,
     inputType: String = "text",
     attributes: Map[String, String] = Map.empty,
-    prefix: Option[PrefixOrSuffix] = None
+    prefix: Option[PrefixOrSuffix] = None,
+    inputmode: Option[String] = None,
+    pattern: Option[String] = None
 )(implicit messages: Messages)
 
 
@@ -55,5 +57,7 @@
     inputType = inputType,
     attributes = attributes,
     prefix = prefix,
+    inputmode = inputmode,
+    pattern = pattern,
     errorMessage = form(name).error.map(err => ErrorMessage(content = Text(messages(err.message, err.args: _*))))
 ))
