--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/BankDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/BankDetailsView.scala.html
@@ -73,9 +73,7 @@
                 label = "bankDetails.accountNumber.heading",
                 hint = Some(Html(messages("bankDetails.accountNumber.hint"))),
                 classes = Some("govuk-input--width-10"),
-                attributes = Map("autocomplete" -> "off"),
-                inputmode = Some("numeric"),
-                pattern = Some("[0-9]*")
+                attributes = Map("autocomplete" -> "off")
             )
         }
 
